start experimenting with country profile display.

--- a/client/partials/Header.html
+++ b/client/partials/Header.html
@@ -2,11 +2,10 @@
 
   <header>
     <div class="container">
-
       <div class="jumbotron">
         <h2>PEDF - Pacific Education Development Framework</h2>
       </div>
-      <!-- {{> loginButtons}} -->
+      {{> loginButtons}}
     </div>
   </header>
 </template>
